force-app/main/default/objects/Class__c/fields/Average_Entrance_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Entrance_Score__c</fullName>
    <formula>Total_Entrance_Score__c  /  Total_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Entrance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>