force-app/main/default/objects/Class__c/fields/Lowest_Entrance_Score__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Entrance_Score__c</fullName>
    <label>Lowest Entrance Score</label>
    <summarizedField>Student__c.Enterance_Score__c</summarizedField>
    <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>