force-app/main/default/objects/Class__c/fields/Total_Entrance_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Entrance_Score__c</fullName>
    <label>Total Entrance Score</label>
    <summarizedField>Student__c.Enterance_Score__c</summarizedField>
    <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>