force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fees__c</columns>
    <columns>Course_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>